--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bluebird": "^3.5.0",
     "electron": "^1.6.6",
     "electron-rebuild": "^1.5.11",
     "electron-settings": "^3.1.1",
@@ -20,5 +19,6 @@
   "devDependencies": {
     "electron": "^1.6.7",
     "html-tag": "^1.0.0"
-  }
+  },
+  "false": {}
 }
