--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "electron": "^1.6.6",
     "electron-rebuild": "^1.5.11",
-    "electron-settings": "^3.1.1",
     "html-tag": "^1.0.0",
-    "nedb": "^1.8.0"
+    "nedb": "^1.8.0",
+    "store-settings": "^1.2.0",
+    "user-settings": "^0.1.5"
   },
   "devDependencies": {
     "electron": "^1.6.7",
