--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "electron ."
   },
   "keywords": [],
-  "author": "",
+  "author": "anastasiia-n",
   "license": "ISC",
   "dependencies": {
     "electron": "^1.6.6",
