--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "enhanced-resolve": "3.3.0",
     "rxjs": "5.4.3",
     "zone.js": "0.8.17",
-    "pouchdb": "^6.3.4"
+    "pouchdb": "6.2.0"
   },
   "devDependencies": {
     "@angular/cli": "1.4.3",
@@ -86,6 +86,7 @@
     "postcss-loader": "2.0.6",
     "postcss-url": "7.1.2",
     "pouchdb": "^6.3.4",
+    "pouchdb-browser": "^6.3.4",
     "protractor": "5.1.2",
     "raw-loader": "0.5.1",
     "sass-loader": "6.0.6",
