--- a/package.json
+++ b/package.json
@@ -44,11 +44,12 @@
     "@angular/platform-browser": "4.4.3",
     "@angular/platform-browser-dynamic": "4.4.3",
     "@angular/router": "4.4.3",
+    "angular2-hotkeys": "^2.0.3",
     "core-js": "2.4.1",
     "enhanced-resolve": "3.3.0",
+    "pouchdb": "6.2.0",
     "rxjs": "5.4.3",
-    "zone.js": "0.8.17",
-    "pouchdb": "6.2.0"
+    "zone.js": "0.8.17"
   },
   "devDependencies": {
     "@angular/cli": "1.4.3",
